# dual_leg_controller

./: CMakeLists.txt  package.xml
config/: hexa_leg_params.yaml  hexapod_foot_monitor_params.yaml  safe_leg_test_params.yaml
include/dual_leg_controller/: dual_leg_controller.h  dynamixel_sync_controller.h
launch/: dual_leg_test.launch  enchanced_smooth_hexapod_joystick_walk.launch  enhanced_smooth_hexapod_joystick_walk.launch  hexa_leg_controller.launch  hexapod_foot_monitor.launch  hexapod_tripod_walk_test.launch  hexapod_tripod_walk_test2.launch  initial_position.launch  minimal_single_leg_test.launch  safe_single_leg_test.launch  smooth_hexapod_joystick_walk.launch  smooth_hexapod_walk_test.launch  tripod_stance.launch  two_leg_relative_walk.launch
model/meshes/: base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  motor.stl
model/urdf/: hexa_leg.xacro  hexa_leg_pod.urdf  materials.xacro
msg/: LegCommand.msg  LegPosition.msg
scripts/: check_initialzation.py  enhanced_joystick_status_display.py  gait_pattern_analyzer.py  hexapod_foot_monitor.py  hexapod_parameter_adjuster.py  joystick_status_display.py  leg_safety_monitor.py  smooth_transition_monitor.py  start_foot_monitor.sh  web_monitor_server.py
scripts/templates/: hexapod_monitor.html
src/: dual_leg_controller.cpp  dynamixel_sync_controller.cpp  enchanced_smooth_hexapod_controller_fixed.cpp  enhanced_hexapod_joystick_controller.cpp  enhanced_smooth_hexapod_controller.cpp  hexapod_directional_controller.cpp.cpp  hexapod_joystick_controller.cpp  hexapod_tripod_controller.cpp  initial_position_setter.cpp  manual_tripod_stance.cpp  safe_dual_leg_test.cpp  safe_single_leg_test.cpp  smooth_hexapod_directional_controller.cpp  two_leg_relative_walk.cpp
templates/: hexapod_monitor.html
